fix: ':' are aligned

--- a/css/contents.css
+++ b/css/contents.css
@@ -34,11 +34,30 @@
   width: 300px;
   position: relative;
 }
-
 #contents ul {
   list-style: none;
   margin: 0;
   padding-left: 0;
+}
+
+#contents ul li a {
+  display: flex;
+  align-items: flex-start;
+}
+#contents ul li a span:nth-child(1) {
+  display: inline-block;
+  width: 20px;
+  text-align: right;
+  margin-right: 2px;
+}
+#contents ul li a span:nth-child(2) {
+  width: 10px;
+  text-align: left;
+  margin-right: 2px;
+}
+#contents ul li a span:nth-child(3) {
+  flex: 1;
+  white-space: normal;
 }
 
 #contents li + li {
@@ -46,18 +65,15 @@
   margin-top: 8px;
   padding-top: 8px;
 }
-
 #contents a {
   color: var(--color_text);
   display: block;
   margin-bottom: 6px;
   text-decoration: none;
 }
-
 #contents a:hover {
   color: var(--color_link);
 }
-
 #contents a.active {
   color: var(--color_link);
   font-weight: bold;
